# dev-ci

./: CHANGELOG.md  Cargo.toml  README.md  REPS.md  clippy.toml
.github/workflows/: ci.yml
docs/: API.md
examples/: basic.rs  full_suite.rs  path_deps.rs  write_to_disk.rs
src/: lib.rs
tests/: smoke.rs
